--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ai": "^4.0.33",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7",
-    "openai": "^4.78.1"
+    "openai": "^4.78.1",
+    "xlsx": "^0.18.5"
   }
 }
