--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ai": "^4.0.33",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7",
+    "gm": "^1.25.0",
+    "imagemagick": "^0.1.3",
     "ollama-ai-provider": "^1.1.0",
     "openai": "^4.78.1",
     "xlsx": "^0.18.5"
